Fixed container margin responsiveness on small devices (landscape) + increased w-3 width on tablet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,18 @@ h1, h2, h3, p {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .container {
+    padding: 0 24px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .container {
+    padding: 0 16px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .container {
     padding: 0 8px;
