--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -50,6 +50,7 @@
   .banner-text {
     padding: 0;
     margin: 24px 0 0 0;
+    width: 240px;
     max-width: none;
   }
 }
@@ -67,5 +68,6 @@
   }
   .banner-text {
     align-self: center;
+    margin-right: 8px;
   }
 }
