--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -49,7 +49,7 @@
   }
   
   .w-3 {
-    width: 300px;
+    width: 400px;
   }
   
   .w-2 {
